--- a/post.html
+++ b/post.html
@@ -13,7 +13,7 @@
             font-family: "Noto Sans TC", "PingFang TC", sans-serif; 
             background-color: #fcfcfc; 
             margin: 0; color: #333; 
-            padding-top: 100px; /* 為固定導覽列留空間 */
+            padding-top: 100px;
         }
 
         /* 導覽列：精準對齊 Resources 標準 */
@@ -40,27 +40,26 @@
             padding: 20px 25px; 
         }
         
-        /* 標題與日期樣式 */
-        #post-date { 
+        /* 標題與日期樣式 (使用你最初的 ID 選擇器) */
+        #date { 
             font-size: 12px; color: #bbb; letter-spacing: 0.15em; 
             display: block; margin-bottom: 10px; text-transform: uppercase;
         }
-        #post-title { 
+        #title { 
             font-size: 2.2rem; font-weight: 500; color: #111; 
             line-height: 1.3; margin: 0 0 40px 0; 
         }
 
         /* 內文排版：行高 2.0 倍，閱讀更舒適 */
-        #post-content { 
+        #content { 
             line-height: 2; font-size: 16px; color: #444; font-weight: 300; 
         }
-        #post-content p { margin-bottom: 25px; text-align: justify; }
-        #post-content img { 
+        #content p { margin-bottom: 25px; text-align: justify; }
+        #content img { 
             max-width: 100%; height: auto; display: block; 
             margin: 30px auto; border: 1px solid #eee; 
         }
 
-        /* 返回鏈接 */
         .back-to-blog {
             display: inline-block; margin-top: 50px; padding-top: 20px;
             border-top: 1px solid #eee; width: 100%;
@@ -78,7 +77,7 @@
         @media (max-width: 600px) {
             nav { height: 65px; }
             .container { padding: 15px 20px; }
-            #post-title { font-size: 1.7rem; }
+            #title { font-size: 1.7rem; }
         }
     </style>
 </head>
@@ -92,9 +91,9 @@
     </nav>
 
     <main class="container">
-        <span id="post-date"></span>
-        <h1 id="post-title"></h1>
-        <div id="post-content"></div>
+        <span id="date"></span>
+        <h1 id="title"></h1>
+        <div id="content"></div>
 
         <a href="blog.html" class="back-to-blog">← Back to Blog</a>
     </main>
@@ -102,29 +101,26 @@
     <footer>&copy; 2025 DESIGN WITH KIRSTEN</footer>
 
     <script>
-        // 保持最原始、簡單的邏輯
+        // 💡 重點：這段 JavaScript 與你原本成功的版本完全一致
         const urlParams = new URLSearchParams(window.location.search);
         const slug = urlParams.get('slug');
 
         async function loadPost() {
             if (!slug) return;
             try {
-                // 讀取 JSON 檔案
                 const response = await fetch('posts/posts.json');
                 const posts = await response.json();
-                // 尋找對應 slug 的文章
                 const post = posts.find(p => p.slug === slug);
 
                 if (post) {
                     document.title = post.title + " | DESIGN WITH KIRSTEN";
-                    document.getElementById('post-title').textContent = post.title;
-                    document.getElementById('post-date').textContent = post.date;
+                    document.getElementById('title').textContent = post.title;
+                    document.getElementById('date').textContent = post.date;
 
-                    // 讀取文章 HTML 內容
                     const contentResponse = await fetch(`posts/${post.slug}.html`);
                     if (contentResponse.ok) {
                         const contentHtml = await contentResponse.text();
-                        document.getElementById('post-content').innerHTML = contentHtml;
+                        document.getElementById('content').innerHTML = contentHtml;
                     }
                 }
             } catch (error) {
