--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>學習UXUI必備資源 | DESIGN WITH KIRSTEN</title>
+    <title>Resources | DESIGN WITH KIRSTEN</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
 
@@ -13,10 +13,10 @@
             font-family: "Noto Sans TC", "PingFang TC", sans-serif; 
             background-color: #fcfcfc; 
             margin: 0; color: #333; 
-            padding-top: 100px;
+            padding-top: 100px; /* 全站統一推頂高度 */
         }
 
-        /* 導覽列 (全站統一) */
+        /* ✨ 標準化導覽列 (與 Index, Post, About 完全一致) */
         nav { 
             position: fixed; top: 0; left: 0; width: 100%; height: 75px; 
             background: rgba(252, 252, 252, 0.85); 
@@ -33,85 +33,78 @@
         }
         nav a:hover { color: #111; }
 
-        .container { max-width: 1000px; margin: 0 auto; padding: 40px 20px; }
-
-        /* 標題區：更新標題字樣 */
-        .page-header { text-align: center; margin-bottom: 80px; }
-        .page-header h1 { 
-            font-size: 1.7rem; font-weight: 500; letter-spacing: 0.35em; 
-            color: #111; margin-bottom: 15px;
-        }
-        .page-header .sub-title { 
-            font-size: 0.8rem; color: #aaa; letter-spacing: 0.15em; font-weight: 300; 
-            text-transform: uppercase;
+        .container { 
+            max-width: 900px; 
+            margin: 0 auto; 
+            padding: 40px 25px; 
         }
 
-        /* 資源網格佈局 (雙欄) */
-        #resource-list {
+        .page-title {
+            font-size: 1.5rem;
+            font-weight: 500;
+            color: #111;
+            margin-bottom: 50px;
+            letter-spacing: 0.1em;
+            text-align: center;
+        }
+
+        /* Resources 列表樣式 */
+        .resource-list {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 25px;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 30px;
         }
 
-        /* 卡片設計 (跟其他頁面一致的直角風格) */
-        .resource-card {
-            background: #fff;
-            border: 1px solid #eee;
-            padding: 40px;
-            display: flex;
-            flex-direction: column;
-            transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
-            text-decoration: none;
-            color: inherit;
-        }
-
-        .resource-card:hover {
-            border-color: #111;
-            transform: translateY(-5px);
-            box-shadow: 0 15px 35px rgba(0,0,0,0.03);
-        }
-
-        .tag {
-            font-size: 10px; color: #bbb; letter-spacing: 0.1em;
-            text-transform: uppercase; margin-bottom: 12px; font-weight: 500;
-        }
-
-        .resource-title {
-            font-size: 1.3rem; font-weight: 500; color: #111;
-            margin: 0 0 15px 0; letter-spacing: 0.05em;
-        }
-
-        .resource-desc {
-            font-size: 0.9rem; color: #888; line-height: 1.7;
-            font-weight: 300; margin-bottom: 30px; flex-grow: 1;
-        }
-
-        /* 按鈕設計 (跟全站一致的直角按鈕) */
-        .resource-link {
-            display: inline-block;
-            align-self: flex-start;
-            padding: 10px 20px;
+        .resource-item {
             border: 1px solid #111;
-            font-size: 10px; font-weight: 500;
-            letter-spacing: 0.2em; text-transform: uppercase;
-            color: #111; transition: 0.3s;
+            padding: 25px;
+            background: #fff;
+            text-decoration: none;
+            color: #333;
+            transition: 0.3s;
         }
-
-        .resource-card:hover .resource-link {
+        .resource-item:hover {
             background: #111;
             color: #fff;
         }
 
-        footer {
-            padding: 80px 0 40px;
-            text-align: center; font-size: 9px; color: #ccc;
-            letter-spacing: 0.3em; text-transform: uppercase;
+        .resource-category {
+            font-size: 10px;
+            text-transform: uppercase;
+            letter-spacing: 0.2em;
+            color: #999;
+            margin-bottom: 10px;
+            display: block;
         }
 
-        @media (max-width: 768px) {
-            #resource-list { grid-template-columns: 1fr; }
-            .page-header h1 { font-size: 1.4rem; }
-            .resource-card { padding: 30px; }
+        .resource-name {
+            font-size: 18px;
+            font-weight: 500;
+            margin-bottom: 15px;
+            display: block;
+        }
+
+        .resource-desc {
+            font-size: 13px;
+            font-weight: 300;
+            line-height: 1.6;
+            opacity: 0.8;
+        }
+
+        footer { 
+            padding: 80px 0 40px; 
+            text-align: center; 
+            font-size: 9px; 
+            color: #ccc; 
+            letter-spacing: 0.3em; 
+            text-transform: uppercase; 
+        }
+
+        @media (max-width: 600px) {
+            nav { height: 65px; }
+            nav a { margin: 0 12px; font-size: 11px; }
+            .container { padding: 30px 20px; }
+            .page-title { font-size: 1.3rem; margin-bottom: 30px; }
         }
     </style>
 </head>
@@ -124,85 +117,25 @@
         <a href="about.html">About</a>
     </nav>
 
-    <div class="container">
-        <header class="page-header">
-            <h1>學習UXUI必備資源</h1>
-            <div class="sub-title">Curated Tools for Design & Productivity</div>
-        </header>
-
-        <div id="resource-list">
+    <main class="container">
+        <h1 class="page-title">Resources</h1>
+        
+        <div class="resource-list">
+            <a href="#" class="resource-item">
+                <span class="resource-category">Tool</span>
+                <span class="resource-name">Figma UI Kit</span>
+                <p class="resource-desc">A collection of essential components for quick wireframing and prototyping.</p>
+            </a>
+            
+            <a href="#" class="resource-item">
+                <span class="resource-category">Book</span>
+                <span class="resource-name">Don't Make Me Think</span>
+                <p class="resource-desc">A common sense approach to Web Usability by Steve Krug.</p>
+            </a>
             </div>
-    </div>
+    </main>
 
-    <footer>
-        &copy; 2025 DESIGN WITH KIRSTEN
-    </footer>
+    <footer>&copy; 2025 DESIGN WITH KIRSTEN</footer>
 
-    <script>
-        // 確保 6 個資源內容完整
-        const resources = [
-            {
-                tag: "#Design Tool",
-                title: "Figma",
-                description: "目前全球領先的協作式介面設計工具，無論是原型製作或系統化設計皆能輕鬆達成。",
-                url: "https://www.figma.com",
-                buttonText: "Direct to Figma"
-            },
-            {
-                tag: "#Portfolio",
-                title: "Behance",
-                description: "Adobe 旗下的創意展示平台，是尋找完整專案細節與視覺包裝靈感的最佳去處。",
-                url: "https://www.behance.net",
-                buttonText: "Explore Behance"
-            },
-            {
-                tag: "#Inspiration",
-                title: "Dribbble",
-                description: "匯集全球頂尖設計師的創意碎片，適合尋找 UI 細節與最新視覺趨勢。",
-                url: "https://dribbble.com",
-                buttonText: "Get Inspired"
-            },
-            {
-                tag: "#UI UX Reference",
-                title: "Mobbin",
-                description: "最齊全的真實 App 介面資料庫，透過解析知名產品的 User Flow 來精進產品邏輯。",
-                url: "https://mobbin.com",
-                buttonText: "Check Mobbin"
-            },
-            {
-                tag: "#Visual Mood",
-                title: "Pinterest",
-                description: "視覺情緒板（Moodboard）的必備工具，幫助你在專案初期快速建立風格方向。",
-                url: "https://www.pinterest.com",
-                buttonText: "See Pinterest"
-            },
-            {
-                tag: "#Tech Trend",
-                title: "Product Hunt",
-                description: "每日更新全球最新的科技產品與 AI 工具，讓你始終走在數位趨勢的最前線。",
-                url: "https://www.producthunt.com",
-                buttonText: "Discover Products"
-            }
-        ];
-
-        function renderResources() {
-            const list = document.getElementById('resource-list');
-            list.innerHTML = '';
-            resources.forEach(item => {
-                const card = document.createElement('a');
-                card.href = item.url;
-                card.target = "_blank";
-                card.className = 'resource-card';
-                card.innerHTML = `
-                    <span class="tag">${item.tag}</span>
-                    <h3 class="resource-title">${item.title}</h3>
-                    <p class="resource-desc">${item.description}</p>
-                    <span class="resource-link">${item.buttonText}</span>
-                `;
-                list.appendChild(card);
-            });
-        }
-        renderResources();
-    </script>
 </body>
 </html>
