--- a/post.html
+++ b/post.html
@@ -6,22 +6,48 @@
     <title>DESIGN WITH KIRSTEN</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
-        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-        body { font-family: "Noto Sans TC", sans-serif; background-color: #fcfcfc; margin: 0; color: #333; padding-top: 100px; }
 
-        /* 統一導覽列 */
-        nav { position: fixed; top: 0; left: 0; width: 100%; height: 75px; background: rgba(252, 252, 252, 0.85); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); display: flex; align-items: center; justify-content: center; border-bottom: 0.5px solid rgba(0,0,0,0.06); z-index: 9999; }
-        nav a { margin: 0 18px; text-decoration: none; color: #999; font-size: 13px; font-weight: 400; transition: 0.3s; letter-spacing: 0.15em; text-transform: uppercase; }
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
+        
+        body { 
+            font-family: "Noto Sans TC", "PingFang TC", sans-serif; 
+            background-color: #fcfcfc; 
+            margin: 0; color: #333; 
+            padding-top: 100px;
+        }
+
+        /* 導覽列：保持你原本的樣式不變 */
+        nav { 
+            position: fixed; top: 0; left: 0; width: 100%; height: 75px; 
+            background: rgba(252, 252, 252, 0.85); 
+            backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px);
+            display: flex; align-items: center; justify-content: center; 
+            border-bottom: 0.5px solid rgba(0,0,0,0.06); 
+            z-index: 9999; 
+        }
+        nav a { 
+            margin: 0 18px; text-decoration: none; 
+            color: #999; font-size: 13px; font-weight: 400;
+            transition: 0.3s; letter-spacing: 0.15em;
+            text-transform: uppercase;
+        }
         nav a:hover { color: #111; }
 
         .container { max-width: 750px; margin: 0 auto; padding: 20px 25px; }
+        
+        /* 內文樣式 */
         #date { font-size: 12px; color: #bbb; letter-spacing: 0.15em; display: block; margin-bottom: 10px; text-transform: uppercase; }
         #title { font-size: 2.2rem; font-weight: 500; color: #111; line-height: 1.3; margin: 0 0 40px 0; }
         #content { line-height: 2; font-size: 16px; color: #444; font-weight: 300; }
         #content p { margin-bottom: 25px; text-align: justify; }
         #content img { max-width: 100%; height: auto; display: block; margin: 30px auto; border: 1px solid #eee; }
 
-        .back-link { display: inline-block; margin-top: 50px; padding-top: 20px; border-top: 1px solid #eee; width: 100%; text-decoration: none; color: #bbb; font-size: 11px; letter-spacing: 0.1em; transition: 0.3s; }
+        .back-link {
+            display: inline-block; margin-top: 50px; padding-top: 20px;
+            border-top: 1px solid #eee; width: 100%;
+            text-decoration: none; color: #bbb; font-size: 11px;
+            letter-spacing: 0.1em; transition: 0.3s;
+        }
         .back-link:hover { color: #111; }
 
         footer { padding: 60px 0 40px; text-align: center; font-size: 9px; color: #ccc; letter-spacing: 0.3em; text-transform: uppercase; }
@@ -29,11 +55,11 @@
         @media (max-width: 600px) {
             nav { height: 65px; }
             nav a { margin: 0 12px; font-size: 11px; }
-            #title { font-size: 1.7rem; }
         }
     </style>
 </head>
 <body>
+
     <nav>
         <a href="index.html">Home</a>
         <a href="blog.html">Blog</a>
@@ -45,6 +71,7 @@
         <span id="date"></span>
         <h1 id="title"></h1>
         <div id="content"></div>
+
         <a href="blog.html" class="back-link">← Back to Blog</a>
     </main>
 
@@ -57,8 +84,8 @@
         async function loadPost() {
             if (!slug) return;
             try {
-                // ✨ 加入 Date.now() 避免瀏覽器抓到舊的 JSON 緩存
-                const res = await fetch(`posts/posts.json?v=${Date.now()}`);
+                // ✨ 加上時間戳記，確保抓到最新的標題和清單
+                const res = await fetch(`posts/posts.json?t=${new Date().getTime()}`);
                 const posts = await res.json();
                 const post = posts.find(p => p.slug === slug);
 
@@ -67,17 +94,20 @@
                     document.getElementById('title').textContent = post.title;
                     document.getElementById('date').textContent = post.date;
 
-                    // 同樣為內文 HTML 加入防緩存
-                    const contentRes = await fetch(`posts/${post.slug}.html?v=${Date.now()}`);
+                    // ✨ 抓取內文 HTML，同樣加上時間戳記防緩存
+                    const contentRes = await fetch(`posts/${post.slug}.html?t=${new Date().getTime()}`);
                     if (contentRes.ok) {
-                        const contentHtml = await contentRes.resText ? await contentRes.text() : await contentRes.text();
+                        const contentHtml = await contentRes.text();
                         document.getElementById('content').innerHTML = contentHtml;
+                    } else {
+                        document.getElementById('content').innerHTML = "內文檔案讀取失敗";
                     }
                 }
             } catch (e) {
-                console.error("Load failed:", e);
+                console.error("載入失敗:", e);
             }
         }
+
         loadPost();
     </script>
 </body>
